--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             background-color: black;
             background: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
-            background-size: auto;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*
+                    Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -26,6 +32,11 @@
 <body>
     <main>
         <h1>Teste de imagens de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa sit quisquam iure, veniam enim accusamus quia temporibus ab id laudantium maxime ut? Atque perferendis quidem rem consectetur eos, distinctio enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolor distinctio reiciendis tempore quibusdam veniam. Molestiae culpa fuga voluptatum fugit. Corrupti eum consequatur animi recusandae dignissimos nobis natus accusantium. Totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam a quas maxime pariatur optio minima iusto vitae explicabo blanditiis! Asperiores odio unde accusantium qui fugiat, ea magni quisquam quos accusamus!</p>
     </main>
 </body>
